[package]
name = "dotconf"
version = "0.1.1"
categories = ["config"]
keywords = ["dotenv", "env", "environment", "settings", "config"]
repository = "https://github.com/devfans/dotconf-rs"
homepage = "https://github.com/devfans/dotconf-rs"
authors = [
  "Stefan Liu <stefanliu@outlook.com>",
]
description = "A very light-weight dotenv crate"
readme = true
edition = "2015"
license = "MIT" 

[lib]
name = "dotconf"
path = "src/lib.rs"